# Flask-Blog

./: .env.example  Dockerfile  MIGRATION-COMPARISON.md  Makefile  README-FastAPI.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.test  todo
.github/workflows/: ci.yml
docs/: modules.rst
docs/source/: conf.py  index.rst
scripts/: generate_credentials.py  install_dependencies.sh  prepare_db_schema.sh  run_smoke_tests.sh  run_tests.sh  set_env_vars.sh  setup.sh  start.sh  wait_for_mysql.sh
src/: app.py  credentials.json.example  init_app.py  main.py  test_setup.py
src/core/: config.py  schemas.py  security.py
src/database/: connection.py
src/misc/: blog_flask.py  common.py
src/pages/: about_page.py  add_article.py  articles_page.py  dashboard_page.py  delete_article.py  edit_article.py  home_page.py  login_page.py  logout_page.py  register_page.py  single_article_page.py
src/routers/: articles.py  auth.py  dashboard.py  pages.py
src/static/css/: main.css
src/templates/: about.html  add_article.html  article.html  articles.html  dashboard.html  edit_article.html  home.html  layout.html  login.html  register.html
src/templates/includes/: _footer.html  _messages.html  _navbar.html
tests/: schema.sql  test_e2e_prev  test_smoke.py
