[tool.poetry]
name = "responsive_blog"
version = "0.1.0"
description = "A simple blog written with Flask framework."
authors = ["Adam Djellouli <addjellouli1@gmail.com>"]
maintainers = ["Adam Djellouli <addjellouli1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djeada/Responsive-Blog"
repository = "https://github.com/djeada/Responsive-Blog"
documentation = "https://github.com/djeada/Responsive-Blog/blob/main/README.md"
keywords = [
    "Flask",
    "Responsive",
    "Blog",
    "Python",
    "Template"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
faker = "*"
requests = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^20.8b1"
isort = "*"
flake8 = "^3.9.0"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/djeada/Responsive-Blog/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
